# AutonomousTradeAgents

./: .gitignore  AGENTV1.md  CLAUDE.md  DESIGN.md  HANDOFF.md  Makefile  PLAN.md  RAILWAY.md  README.md  fable5findings.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.toml  tsconfig.base.json  turbo.json
apps/agents/: README.md  pyproject.toml
apps/agents/scripts/: daily_cron.py  ghost_eval.py
apps/agents/tests/: test_cost_ledger.py  test_council_mock.py  test_daily_cron.py  test_ghost_eval.py  test_reflection.py  test_tracing.py
apps/agents/trading_agents/: __main__.py  cost_ledger.py  graph.py  llm.py  progress.py  reflection_cli.py  runtime.py  state.py  tracing.py
apps/agents/trading_agents/features/: __init__.py  synthetic.py
apps/agents/trading_agents/memory/: __init__.py  decision_log.py  postgres.py  strategy_confidence.py
apps/agents/trading_agents/nodes/: __init__.py  drafter.py  fundamental_analyst.py  macro_analyst.py  reflection.py  risk_officer.py  router.py  selector.py  technical_analyst.py
apps/agents/trading_agents/prompts/: __init__.py  drafter.py  fundamental_analyst.py  macro_analyst.py  reflection.py  router.py  selector.py  technical_analyst.py
apps/agents/trading_agents/strategies/: __init__.py
apps/api/: .env.example  AUTH.md  Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/middleware/: __init__.py  auth.py
apps/api/app/routers/: __init__.py  account.py  activity.py  agent.py  approvals.py  auth.py  broker.py  decisions.py  health.py  insights.py  notifications.py  orders.py  portfolio.py  review.py  strategies.py  watchlist.py
apps/api/app/schemas/: __init__.py  account.py  activity.py  agent.py  approvals.py  auth.py  base.py  broker.py  decisions.py  health.py  notifications.py  orders.py  portfolio.py  review.py  strategies.py  watchlist.py
apps/api/app/services/: agent_runs.py  alpaca_oauth.py  auth.py  auth_store.py  biography_service.py  broker_store.py  broker_use.py  crypto.py  executor.py  expo_push.py  ghost_service.py  health.py  jwt_service.py  mock_store.py  notification_store.py  notifications.py  order_store.py  order_sync.py  paper_broker.py  portfolio_service.py  position_manager.py  postgres_auth_store.py  postgres_broker_store.py  postgres_notification_store.py  (+8 more)
apps/api/scripts/: start.sh  zerodha_reconnect_cron.py
apps/api/tests/: test_auth.py  test_broker.py  test_crypto.py  test_executor_risk_context.py  test_health_route.py  test_notifications.py  test_order_sync.py  test_orders_route.py  test_paper_mode.py  test_portfolio_route.py  test_position_manager.py  test_postgres_stores.py  test_review_route.py  test_strategies_route.py  test_zerodha_reconnect_push.py  test_zerodha_routes.py
(+65 files in other folders)
