[project]
name = "agents"
version = "0.0.1"
description = "LangGraph agent council — Router, Analysts, Strategy Selector, Risk Officer, Executor, Reflection."
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "litellm>=1.50.0",
  "anthropic>=0.40.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "redis[asyncio]>=5.1.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.30.0",
  # Workspace siblings.
  "broker",
  "engine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
broker = { workspace = true }
engine = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["trading_agents"]
