[project]
name = "api"
version = "0.0.1"
description = "FastAPI gateway — auth, request validation, REST surface for the mobile app."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.30.0",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "redis[asyncio]>=5.1.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "sentry-sdk[fastapi]>=2.0.0",
  # Workspace siblings (path-resolved by uv).
  "broker",
  "engine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
broker = { workspace = true }
engine = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]
